--- a/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
+++ b/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
@@ -11,8 +11,8 @@
 <p>Please add your best movies to the collection.</p>
 
 <form method="post">
-    <label asp-for="Category">Category:</label>
-    <input asp-for="Category" required><br><br>
+    <label asp-for="CategoryID">Category:</label>
+    <input asp-for="CategoryID" required><br><br>
 
     <label asp-for="Title">Title:</label>
     <input asp-for="Title" required><br><br>
