--- a/Mission06_Valdovinos/Views/Home/Index.cshtml
+++ b/Mission06_Valdovinos/Views/Home/Index.cshtml
@@ -42,6 +42,9 @@
         <td>@x.Edited</td>
         <td>@x.LentTo</td>
         <td>@x.Notes</td>
+
+        <td><a class="btn btn-info" asp-controller="Home" asp-action="Edit" asp-route-id="@x.MovieID">Edit</a></td>
+        <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.MovieID">Delete</a></td>
         </tbody>
         </tr>
     }
