--- a/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
+++ b/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
@@ -11,8 +11,17 @@
 <p>Please add your best movies to the collection.</p>
 
 <form method="post">
+    <input type="hidden"  asp-for="MovieID"/>
+
     <label asp-for="CategoryID">Category:</label>
-    <input asp-for="CategoryID" required><br><br>
+    <select>
+        <option value="">Select a Category</option>
+        @foreach (Categories c in ViewBag.Categories)
+        {
+            <option value="@c.CategoryId">@c.CategoryName</option>
+        }
+    </select>
+    <br /><br />
 
     <label asp-for="Title">Title:</label>
     <input asp-for="Title" required><br><br>
