added the question marks

--- a/Mission06_Valdovinos/Views/Home/Index.cshtml
+++ b/Mission06_Valdovinos/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
             <td>Rating</td>
             <td>Edited</td>
             <td>Lent To</td>
+            <tb>Coppied To Plex</tb>
             <td>Notes</td>
         </tr>
     </thead>
@@ -41,10 +42,11 @@
         <td>@x.Rating</td>
         <td>@x.Edited</td>
         <td>@x.LentTo</td>
+        <td>@x.CategoryID</td>
         <td>@x.Notes</td>
 
-        <td><a class="btn btn-info" asp-controller="Home" asp-action="Edit" asp-route-id="@x.MovieID">Edit</a></td>
-        <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.MovieID">Delete</a></td>
+        <td><a class="btn btn-info" asp-controller="Home" asp-action="Edit" asp-route-id="@x.MovieId">Edit</a></td>
+        <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.MovieId">Delete</a></td>
         </tbody>
         </tr>
     }
