--- a/Mission06_Valdovinos/Views/Home/Delete.cshtml
+++ b/Mission06_Valdovinos/Views/Home/Delete.cshtml
@@ -8,10 +8,10 @@
 
 <h2>Confirm Deletion</h2>
 <h3>@Model.Title</h3>
-<form>
+<form method="post">
 
-    <input type="hidden" asp-for="MovieID"/>
+    <input type="hidden" asp-for="MovieId"/>
 
-    <button class="btn btn-danger">Delete</button>
+    <button type="submit" class="btn btn-danger">Delete</button>
     <a class="btn btn-info" asp-controller="Home" asp-action="Index">Cancel</a>
 </form>
