--- a/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
+++ b/Mission06_Valdovinos/Views/Home/MovieForm.cshtml
@@ -11,7 +11,7 @@
 <p>Please add your best movies to the collection.</p>
 
 <form method="post">
-    <input type="hidden"  asp-for="MovieID"/>
+    <input type="hidden"  asp-for="MovieId"/>
 
     <label asp-for="CategoryID">Category:</label>
     <select>
@@ -30,10 +30,10 @@
     <input asp-for="Year" required><br><br>
 
     <label asp-for="Director">Director:</label>
-    <input asp-for="Director" required><br><br>
+    <input asp-for="Director"><br><br>
 
     <label asp-for="Rating">Rating:</label>
-    <select asp-for="Rating" required>
+    <select asp-for="Rating">
         <option value="G">G</option>
         <option value="PG">PG</option>
         <option value="PG-13">PG-13</option>
@@ -41,7 +41,7 @@
     </select><br><br>
 
     <label asp-for="Edited">Edited:</label>
-    <select asp-for="Edited" >
+    <select asp-for="Edited" required>
         <option value="true">Yes</option>
         <option value="false">No</option>
     </select><br><br>
@@ -49,8 +49,17 @@
     <label asp-for="LentTo">Lent To:</label>
     <input asp-for="LentTo"><br><br>
 
+    <label asp-for="CopiedToPlex">Has it been Copied to Plex?:</label>
+    <select asp-for="CopiedToPlex" required>
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+    </select><br><br>
+
     <label asp-for="Notes">Notes:</label>
     <input asp-for="Notes" maxlength="25"><br><br>
 
     <button type="submit">Submit Application</button>
+
+    <div asp-validation-summary="All"></div>
+
 </form>
